--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ var setDateTime = function() {
 
 	document.getElementById("time").innerHTML = hour + ":" + min + " " + ampm
 	document.getElementById("date").innerHTML = months[month] + " " + day + ", " + year;
+	document.getElementById("sec").innerHTML = sec;
 }
 
 window.setInterval(setDateTime, 1000)
@@ -55,6 +56,15 @@ div.date {
 	font-size: 13vw;
 }
 
+div.seconds {
+	position: relative;
+	right: -59%;
+	top: -40%;
+	font-size: 300%;
+	height: 0px;
+	color: rgb(24,24,24);
+}
+
 div.center {
 	text-align: center;
 }
@@ -64,6 +74,7 @@ div.center {
 	<div class="content">
 		<div class="pusher"></div>
 		<div class="time center" id="time"></div>
+		<div class="seconds" id="sec"></div>
 		<div class="date center" id="date"></div>
 	</div>
 </body>
