move seconds a little

--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@ div.date {
 }
 
 div.seconds {
-	position: relative;
-	right: -59%;
-	top: -40%;
-	font-size: 300%;
-	height: 0px;
+	position: absolute;
+	left: 57%;
+	top: 20%;
+	font-size: 400%;
 	color: rgb(24,24,24);
 }
 
